updating files and adding slide 4

--- a/gadz-it-offecial/src/components/home_page/Home.css
+++ b/gadz-it-offecial/src/components/home_page/Home.css
@@ -178,7 +178,7 @@
   width: 1400px;
   height: 889.2px;
   overflow: hidden;
-  background-image: url(../../public/divgenericblockwrapper@3x.png);
+  background-image: url(../../public/background-slides.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
