--- a/gadz-it-offecial/src/components/home_page/slides/slide2/Slide2.css
+++ b/gadz-it-offecial/src/components/home_page/slides/slide2/Slide2.css
@@ -259,7 +259,7 @@
   top: 10px;
   border-radius: var(--br-5xl);
   left: calc(50% - 706.5px);
-  background-image: url(../../../../public/divgenericblockwrapper@3x.png);
+  background-image: url(../../../../public/background-slides.png);
   width: 1400px;
   height: 889.2px;
   overflow: hidden;
