--- a/gadz-it-offecial/src/components/home_page/SearchBar.css
+++ b/gadz-it-offecial/src/components/home_page/SearchBar.css
@@ -6,3 +6,40 @@
   height: 100px;
 }
 
+.search-box{
+  
+  position: relative;
+}
+.input-search{
+  height: 50px;
+  width: 300px;
+  border-style: none;
+  padding: 10px;
+  padding-bottom: 0px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  outline: none;
+  background-color: var(--color-gray-200);
+  padding-right: 40px;
+  color:#fff;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom:1px solid rgba(255,255,255,.5);
+}
+
+.input-search::placeholder{
+  color:rgba(255,255,255,.5);
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+
+
+.clear-search-icon {
+  cursor: pointer;
+  position: absolute;
+  top: 29px;
+  left: 325px;
+  width: 20px;
+  height: 20px;
+}
