--- a/gadz-it-offecial/src/index.css
+++ b/gadz-it-offecial/src/index.css
@@ -10,6 +10,7 @@ body {
   --font-inter: Inter;
   --font-khand: Khand;
   --font-heebo: Heebo;
+  --body-regular: Roboto;
 
   /* font sizes */
   --font-size-9xl: 28px;
@@ -21,6 +22,7 @@ body {
   --font-size-16xl: 35px;
   --font-size-19xl: 38px;
   --font-size-sm: 14px;
+  --h5-regular-size: 16px;
 
   /* Colors */
   --color-white: #fff;
@@ -29,16 +31,31 @@ body {
   --color-gray-200: #1c1925;
   --color-gray-300: #17151b;
   --color-gray-400: rgba(255, 255, 255, 0);
+  --color-gray-500: #1d1f24;
+  --color-gray-600: #0f0e11;
   --color-silver: #c0bcca;
   --color-mediumslateblue: #8762f8;
   --color-darkslategray: #312e37;
+  --colors-text: #f9f9f9;
 
   /* Gaps */
   --gap-9xl: 28px;
+  --gap-3xs: 10px;
+  --gap-xl: 20px;
+
 
   /* Border radiuses */
   --br-5xl: 24px;
   --br-3xs: 10px;
   --br-5xs: 8px;
   --br-xl: 20px;
+  --br-21xl: 40px;
+
+  /* Paddings */
+  --padding-xl: 20px;
+  --padding-3xs: 10px;
+  --padding-8xs: 5px;
+  --padding-11xl: 30px;
+
 }
+
