--- a/gadz-it-offecial/src/pages/HomePage.css
+++ b/gadz-it-offecial/src/pages/HomePage.css
@@ -1,6 +1,6 @@
 .desktop {
   background-color: #0f0e11;
-  width: 100%;
+  max-width: 100%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -10,26 +10,28 @@
   font-size: var(--font-size-sm);
   color: var(--color-gray-100);
   font-family: var(--font-heebo);
-  min-height: 100vh;
+  
 }
 
 .desktop,
 .global-frame {
   position: relative;
-  width: 1920px;
-  height: 1180px;
-  min-height: 100vh;
-  
+  max-width: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .body-frame {
-  position: absolute;
-  top: 99px;
+  position: relative;
+  /*top: 6.1875rem;*/
   left: 0;
   bottom: 0;
-  width: 1920px;
-  height: 1280px;
+  max-width: 100%;
+  /*min-height: 67.625rem;*/
+  aspect-ratio: 920/518.46;
   overflow: hidden;
-  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
