--- a/gadz-it-offecial/src/components/home_page/slides/slide1/Slide1.css
+++ b/gadz-it-offecial/src/components/home_page/slides/slide1/Slide1.css
@@ -1,37 +1,13 @@
+/*
 
-.divleftpanel-logo {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: var(--color-gray-200);
-  border-bottom: 1px solid var(--color-gray-200);
-  box-sizing: border-box;
-  width: 279px;
-  height: 100px;
-}
 .divbar-item-icon {
   position: relative;
   width: 50px;
   height: 100px;
 }
+*/
 
-.header-frame,
-.header {
-  position: absolute;
-  top: 0;
-  height: 100px;
-}
-.header {
-  width: calc(100% - 279px);
-  right: 0;
-  left: 279px;
-  background-color: var(--color-gray-200);
-}
-.header-frame {
-  left: 0;
-  width: 1899px;
-  overflow: hidden;
-}
+
 .frenify-team,
 .list-item {
   letter-spacing: 0.5px;
@@ -92,64 +68,63 @@
 }
 .image1-slide1 {
   position: absolute;
-  top: 53px;
-  left: 693px;
-  width: 707px;
-  height: 836px;
+  top: 5.95%;
+  left: 46.434%;
+  width: 53.578%;
+  height: 94.022%;
   object-fit: cover;
 }
 .heading-1,
 .heading-11 {
   position: absolute;
   top: 0;
-  left: calc(50% - 387.7px);
-  line-height: 67.2px;
+  line-height: 3.5vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 775.4px;
-  height: 83px;
+  width: 100%;
+  height: 55.12%;
+  font-size: 2.9167vw;
 }
 .heading-11 {
-  top: 67.6px;
-  left: calc(50% - 177.6px);
-  width: 355.1px;
+  top: 44.889%;
+  left: 27.096%;
+  width: 50%;
   opacity: 0.97;
 }
 .title-frame {
   position: absolute;
-  top: 67px;
-  left: 62.4px;
-  width: 775.4px;
-  height: 150.6px;
+  top: 16.759%;
+  left: 4.589%;
+  width: 57.015%;
+  height: 37.669%;
   overflow: hidden;
 }
 .heading-4,
 .heading-41 {
   position: absolute;
   top: 0;
-  left: calc(50% - 427.2px);
-  line-height: 31.99px;
+  line-height: 1.7622vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 854.4px;
-  height: 34px;
+  width: 100%;
+  height: 50.296%;
 }
 .heading-41 {
-  top: 33.6px;
-  left: calc(50% - 314.1px);
-  font-size: 22.69px;
-  width: 628px;
+  top: 49.72%;
+  left: 13.23%;
+  font-size: 1.1917vw;
+  width: 73.503%;
 }
 .description-frame {
   position: absolute;
-  top: 228.4px;
-  left: 22.9px;
-  width: 854.4px;
-  height: 67.6px;
+  top: 57.13%;
+  left: 1.684%;
+  width: 69.466%;
+  height: 16.91%;
   overflow: hidden;
-  font-size: 22.88px;
+  font-size: 1.1917vw;
 }
 .divcolumns,
 .frame6 {
@@ -160,20 +135,19 @@
   width: 100%;
   right: 0;
   left: 0;
-  height: 399.8px;
+  height: 44.973%;
 }
 .text-content {
-  left: 44px;
-  width: 900px;
-  height: 889px;
+  width: 66.177%;
+  height: 100%;
   overflow: hidden;
 }
 .logo-1-1-icon {
   position: absolute;
-  top: 21px;
-  left: 38px;
-  width: 600px;
-  height: 342px;
+  top: 3.56%;
+  left: 2.923%;
+  width: 46.14%;
+  height: 57.967%;
   object-fit: cover;
 }
 .pseudo,
@@ -206,11 +180,11 @@
 
 
 .try-now {
-  top: 26px;
-  left: calc(50% - 91px);
-  font-size: 50px;
-  letter-spacing: 0.5px;
-  line-height: 40px;
+  top: 22.23%;
+  left: 9.375%;
+  font-size: 2.6042vw;
+  letter-spacing: 0.026042vw;
+  line-height: 2.083335vw;
   text-transform: uppercase;
   display: flex;
   font-family: var(--font-khand);
@@ -218,8 +192,8 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  width: 183px;
-  height: 21px;
+  width: 81.7%;
+  height: 55.57%;
 }
 .link {
   
@@ -229,10 +203,8 @@
   background-color: transparent;
   height: 80%;
   width: 70%;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 25%;
+  top: 10%;
+  left: 15%;
   border-radius: var(--br-xl);
   background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)),
     #1c1925;
@@ -240,10 +212,10 @@
   overflow: hidden;
 }
 .button-frame {
-  top: 410px;
-  left: 190px;
-  width: 320px;
-  height: 90px;
+  top: 69.493%;
+  left: 17.072%;
+  width: 24.608%;
+  height: 15.256%;
 }
 
 .button-frame :hover {
@@ -258,31 +230,30 @@
 }
 .divgeneric-block {
   width: 100%;
-  top: 299px;
+  top: 33.634%;
   right: 0;
   left: 0;
-  height: 590px;
+  height: 66.367%;
 }
 .main-content {
   top: 0;
-  left: 11px;
-  width: 1360px;
-  height: 889px;
+  left: 0.75%;
+  width: 92.897%;
+  height: 99.981%;
 }
-.divgeneric-block-wrapper {
+.divgeneric-block-wrapper-1 {
   position: absolute;
-  top: 10px;
-  left: calc(50% - 706.5px);
+  top: 0.521vw;
   border-radius: 24px;
-  width: 1400px;
-  height: 889.2px;
+  width: 91.136%;
+  height: 97.82%;
   overflow: hidden;
   background-image: url(../../../../public/background-slides.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
 }
-.divsection-left {
+.divsection-left-1 {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -290,17 +261,18 @@
   right: 0;
   bottom: 0;
   left: 0;
-  border-right: 1px solid var(--color-darkslategray);
   box-sizing: border-box;
+  display: flex;
+  justify-content: center;
 }
 
-.divsection-home {
+.divsection-home-1 {
   position: relative;
-  width: calc(100% - 21px);
+  max-width: 100%;
   top: 0;
-  right: 21px;
   left: 0;
-  height: 909px;
+  /*min-height: 56.8125rem;*/
+  aspect-ratio: 1536/909;
   text-align: center;
   font-size: var(--font-size-37xl);
   color: var(--color-white);
