--- a/gadz-it-offecial/src/components/home_page/slides/slide2/Slide2.css
+++ b/gadz-it-offecial/src/components/home_page/slides/slide2/Slide2.css
@@ -5,15 +5,17 @@
   
 }
 .asset-41-11 {
-  top: 229px;
+  top: 25.05%;
   left: 0;
-  height: 685.2px;
+  height: 74.951%;
+  width: 100%;
   object-fit: cover;
 }
 .frame10 {
-  top: -23px;
-  left: 530px;
-  height: 914.2px;
+  top: -2.587%;
+  left: 37.858%;
+  height: 102.812%;
+  width: 60.715%;
   overflow: hidden;
 }
 .pseudo1,
@@ -41,11 +43,11 @@
 }
 .try-now1 {
   position: absolute;
-  top: 26px;
-  left: calc(50% - 91px);
-  font-size: var(--font-size-31xl);
-  letter-spacing: 0.5px;
-  line-height: 40px;
+  top: 34.953%;
+  left: 13.597%;
+  font-size: 2.605vw;
+  letter-spacing: 0.02605vw;
+  line-height: 2.0834vw;
   text-transform: uppercase;
   display: flex;
   font-family: var(--font-khand);
@@ -53,8 +55,8 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  width: 183px;
-  height: 21px;
+  width: 73.212%;
+  height: 28.231%;
 }
 .link-python-inkypng,
 .link1 {
@@ -85,8 +87,8 @@
   top: 0;
   left: 0;
   border-radius: var(--br-3xs);
-  width: 100px;
-  height: 100px;
+  width: 18.8324%;
+  height: 100%;
   background-image: url(../../../../public/linkpythoninkypng@2x.png);
   background-size: cover;
   background-repeat: no-repeat;
@@ -100,11 +102,11 @@
 }
 .photo-icon {
   position: absolute;
-  top: 18px;
-  left: 8px;
+  top: 18%;
+  left: 8%;
   border-radius: var(--br-5xs);
-  width: 83px;
-  height: 82px;
+  width: 83%;
+  height: 82%;
   overflow: hidden;
   object-fit: cover;
 }
@@ -117,47 +119,47 @@
   background-color: var(--color-darkslateblue);
   position: absolute;
   top: 0;
-  left: 142px;
+  left: 26.742%;
   border-radius: var(--br-3xs);
-  width: 100px;
-  height: 100px;
+  width: 18.8324%;
+  height: 100%;
   overflow: hidden;
 }
 .link-c-inkypng,
 .link-html-inkypng1 {
-  left: 430px;
+  left: 80.9793%;
 }
 .link-html-inkypng1 {
-  left: 286px;
+  left: 53.8607%;
 }
 .divgeneric-block-inner,
 .link-python-inkypng-parent {
   position: absolute;
   top: 0;
-  left: -5px;
-  width: 530px;
-  height: 100px;
+  left: -0.3677%;
+  width: 97.972%;
+  height: 41.17%;
 }
 .divgeneric-block-inner {
-  top: 195px;
-  left: 38px;
-  width: 542px;
+  top: 33.0509%;
+  left: 2.7942%;
+  width: 39.853%;
 }
 .heading-2,
 .heading-21 {
   position: relative;
-  line-height: 33.6px;
-  height: 41px;
+  line-height: 1.75vw;
+  height: 50%;
   flex-shrink: 0;
 }
 .heading-2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 216px;
+  width: 55.4131%;
 }
 .heading-21 {
-  width: 197.7px;
+  width: 50.7184%;
 }
 .heading-2-popular-pluralsigh-parent,
 .heading-21,
@@ -168,16 +170,16 @@
 }
 .heading-22 {
   position: relative;
-  line-height: 33.6px;
-  width: 132.9px;
-  height: 41px;
+  line-height: 1.75vw;
+  width: 34.0945%;
+  height: 50%;
   flex-shrink: 0;
 }
 .heading-2-popular-pluralsigh-parent {
   position: absolute;
-  top: 65px;
-  left: 96px;
-  width: 389.8px;
+  top: 11.017%;
+  left: 7.0589%;
+  width: 28.6618%;
   flex-direction: row;
   flex-wrap: wrap;
 }
@@ -189,21 +191,21 @@
 }
 .divgeneric-block1 {
   width: 100%;
-  top: 322px;
+  top: 35.3071%;
   right: 0;
-  height: 590px;
+  height: 64.693%;
 }
 .frame12 {
   top: 0;
-  width: 1360px;
-  height: 912px;
+  width: 100%;
+  height: 100%;
 }
 .heading-12 {
-  top: 67px;
-  left: calc(50% - 387.6px);
-  line-height: 67.2px;
-  width: 775.4px;
-  height: 83px;
+  top: 20.8723%;
+  left: 6.9334%;
+  line-height: 3.5vw;
+  width: 86.1556%;
+  height: 25.8567%;
 }
 .heading-12,
 .heading-13,
@@ -215,83 +217,94 @@
   justify-content: center;
 }
 .heading-13 {
-  top: 134.6px;
-  left: calc(50% - 177.5px);
-  line-height: 67.2px;
-  width: 355.1px;
-  height: 83px;
+  top: 41.9315%;
+  left: 30.2778%;
+  line-height: 3.5vw;
+  width: 39.4556%;
+  height: 25.8567%;
   opacity: 0.97;
 }
 .heading-42,
 .heading-43 {
-  top: 228.4px;
-  left: calc(50% - 427.1px);
-  font-size: 22.88px;
-  line-height: 31.99px;
-  width: 854.4px;
-  height: 34px;
+  top: 71.1527%;
+  left: 2.5445%;
+  font-size: 1.192vw;
+  line-height: 1.667vw;
+  width: 94.9334%;
+  height: 10.5919%;
 }
 .heading-43 {
-  top: 262px;
-  left: calc(50% - 314px);
-  font-size: 22.69px;
-  width: 628px;
+  top: 81.6199%;
+  left: 15.1112%;
+  font-size: 1.182vw;
+  width: 69.7778%;
 }
 .divcolumns1 {
   position: absolute;
-  width: calc(100% - 460px);
+  width: 66.1765%;
   top: 0;
-  right: 283px;
-  left: 177px;
-  height: 321px;
-  font-size: var(--font-size-37xl);
+  right: 20.809%;
+  left: 13.0148%;
+  height: 35.1974%;
+  font-size: 2.9167vw;
 }
 .frame11 {
   position: absolute;
-  top: -23px;
-  left: 11px;
-  width: 1360px;
-  height: 912px;
+  top: -2.587%;
+  left: 0.786%;
+  width:97.143%;
+  height: 102.565%;
   overflow: hidden;
 }
-.divgeneric-block-wrapper1 {
+.divgeneric-block-wrapper-2 {
   position: relative;
-  top: 10px;
+  top: 0.521vw;
   border-radius: var(--br-5xl);
-  left: calc(50% - 706.5px);
   background-image: url(../../../../public/background-slides.png);
-  width: 1400px;
-  height: 889.2px;
+  width: 72.917vw;
+  height: 97.823%;
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
   text-align: center;
-  font-size: var(--font-size-9xl);
+  font-size: 1.4584vw;
   color: var(--color-white);
   font-family: var(--font-inter);
   
 }
-@media screen and (max-width: 1200px) {
-  .link-c-inkypng {
-    width: 100px;
-  }
-  .divgeneric-block-wrapper1 {
-    width: 100%;
-  }
-}
 
 
-.divsection-home {
+
+.divsection-home-2 {
   position: relative;
-  width: calc(100% - 21px);
+  width: 100%;
+  aspect-ratio: 1536/909;
   top: 0;
-  right: 21px;
+  right: 0;
   left: 0;
-  height: 909px;
+  /*height: 909px;*/
   text-align: center;
   font-size: var(--font-size-37xl);
   color: var(--color-white);
   font-family: var(--font-inter);
   
+}
+/*
+.divsection-left-2 {
+  height: 100%;
+  width: 100%;
+}
+*/
+.divsection-left-2 {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
 }
