--- a/gadz-it-offecial/src/components/home_page/slides/slide4/Slide4.css
+++ b/gadz-it-offecial/src/components/home_page/slides/slide4/Slide4.css
@@ -1,9 +1,9 @@
 .divgeneric-block-child4 {
   position: absolute;
-  top: 400px;
-  left: 24px;
-  width: 500px;
-  height: 280px;
+  top: 50.633%;
+  left: 1.7648%;
+  width: 36.7648%;
+  height: 35.4431%;
   overflow: hidden;
   object-fit: cover;
 }
@@ -11,7 +11,7 @@
   border-radius: var(--br-xl);
   background-color: transparent;
   box-shadow: 0 5px 15px #8768f8;
-  opacity: 0.1;
+  /*opacity: 0.1;*/
 }
 .pseudo4-1,
 .pseudo4-2,
@@ -25,25 +25,23 @@
   left: 0;
 }
 .pseudo4-2 {
-  border-radius: var(--br-xl);
+  border-radius: var(--br-xl);/*
   background: linear-gradient(
     270deg,
     #4813d1,
     #6608fa 33.33%,
     #b545ff 66.67%,
     #da8b79
-  );
+  );*/
 }
-.pseudomask-group4 {
-  background-color: var(--color-mediumslateblue);
-}
+
 .get-started {
   position: absolute;
-  top: 26px;
-  left: calc(50% - 91px);
-  font-size: 38px;
-  letter-spacing: 0.5px;
-  line-height: 40px;
+  top: 34.9463%;
+  left: 13.6%;
+  font-size: 1.9792vw;
+  letter-spacing: 0.02605vw;
+  line-height: 2.0834vw;
   text-transform: uppercase;
   display: flex;
   font-family: var(--font-khand);
@@ -51,20 +49,26 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  width: 183px;
-  height: 21px;
+  width: 73.2%;
+  height: 28.2259%;
 }
 .link4 {
   cursor: pointer;
   border: 0;
   padding: 0;
-  background-color: #1c1925;
+  background: linear-gradient(
+    270deg,
+    #4813d1,
+    #6608fa 33.33%,
+    #b545ff 66.67%,
+    #da8b79
+  );
   position: absolute;
-  top: calc(50% + 235px);
-  left: 623px;
+  top: 79.7469%;
+  left: 45.8089%;
   border-radius: var(--br-xl);
-  width: 250px;
-  height: 74.4px;
+  width: 18.3824%;
+  height: 9.4178%;
   overflow: hidden;
 }
 
@@ -85,54 +89,54 @@
 .heading-4-2,
 .heading-4-3 {
   position: absolute;
-  top: 52px;
-  left: calc(50% - 547px);
-  line-height: 67.2px;
+  top: 6.5823%;
+  left: 9.7795%;
+  line-height: 3.5vw;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 740px;
-  height: 166px;
+  width: 54.4118%;
+  height: 21.0127%;
 }
 .heading-4-2,
 .heading-4-3 {
-  top: 229px;
-  left: calc(50% - 642px);
-  font-size: 35px;
-  width: 929px;
+  top: 28.9874%;
+  left: 2.7942%;
+  font-size: 1.82292vw;
+  width: 68.3089%;
 }
 .heading-4-3 {
-  top: 715px;
-  left: calc(50% - 310px);
-  font-size: 20px;
-  width: 755px;
-  height: 49px;
+  top: 90.5064%;
+  left: 27.2059%;
+  font-size: 1.0417vw;
+  width: 55.5148%;
+  height: 6.2026%;
 }
 .divgeneric-block4 {
   position: absolute;
-  width: calc(100% - 40px);
-  top: 99px;
-  right: 37px;
-  left: 3px;
-  height: 790px;
+  width: 97.1429%;
+  top: 11.1337%;
+  right: 2.6429%;
+  left: 0.2143%;
+  height: 88.844%;
   overflow: hidden;
 }
 .asset-41-44 {
   position: absolute;
-  top: 135px;
-  left: 972px;
-  width: 300px;
-  height: 670px;
+  top: 15.1822%;
+  left: 69.4286%;
+  width: 21.4286%;
+  height: 75.3487%;
   object-fit: cover;
 }
-.divgeneric-block-wrapper4 {
+.divgeneric-block-wrapper-4 {
   position: relative;
-  top: 10px;
+  top: 0.521vw;
   border-radius: var(--br-5xl);
-  left: calc(50% - 706.5px);
+  left: 4.004%;
   background-image: url(../../../../public/background-slides.png);
-  width: 1400px;
-  height: 889.2px;
+  width: 72.917vw;
+  height: 97.823%;
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
@@ -140,5 +144,5 @@
   text-align: center;
   color: var(--color-white);
   font-family: var(--font-inter);
-  font-size: var(--font-size-37xl);
+  font-size: 2.917vw;
 }
