--- a/gadz-it-offecial/src/components/home_page/slides/slider.css
+++ b/gadz-it-offecial/src/components/home_page/slides/slider.css
@@ -1,23 +1,18 @@
 .parent {
-  top: 10px;
-  left: calc(50% - 706.5px);
-  border-radius: 24px;
-  
-  height: 100%;
+  position: relative;
+  /*min-height: 100%;*/
+  aspect-ratio: 64/33;
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
-
-  position: relative;
-  width: calc(100% - 21px);
+  max-width: 100%;
   top: 0;
-  right: 21px;
-  left: 0;
-  
   text-align: center;
   font-size: var(--font-size-37xl);
   color: var(--color-white);
   font-family: var(--font-inter);
-  
+  display: flex;
+  justify-content: center;
+  background-color: #100E1A;
 }
