--- a/gadz-it-offecial/src/App.css
+++ b/gadz-it-offecial/src/App.css
@@ -1,7 +1,16 @@
 .App {
 
-  overflow-y: scroll;
+  /*overflow-y: scroll;
   overflow-x: hidden;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100vh;*/
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow-x: hidden;
 }
+
+.App::-webkit-scrollbar {
+  display: none;
+}
+
