--- a/gadz-it-offecial/src/index.css
+++ b/gadz-it-offecial/src/index.css
@@ -1,10 +1,26 @@
-@import url("https://fonts.googleapis.com/css2?family=Khand:wght@700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400&display=swap");
-body {
+@import url("https://fonts.googleapis.com/css2?family=Khand:wght@500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;400;500;600;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@200;400;500;600&display=swap");
+
+html ,body {
   margin: 0;
   line-height: normal;
+  background-color: var(--color-gray-300);
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  overflow-x: hidden;
+  width: 100%;
 }
+
+#root{
+  display: flex;
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 100%;
+}
+
 :root {
   /* fonts */
   --font-inter: Inter;
@@ -15,6 +31,7 @@ body {
   /* font sizes */
   --font-size-9xl: 28px;
   --font-size-31xl: 50px;
+  --font-size-31xl-6: 50.6px;
   --font-size-3xl-7: 22.7px;
   --font-size-3xl-9: 22.9px;
   --font-size-37xl: 56px;
@@ -22,21 +39,57 @@ body {
   --font-size-16xl: 35px;
   --font-size-19xl: 38px;
   --font-size-sm: 14px;
+  --font-size-smi: 13px;
   --h5-regular-size: 16px;
+  --font-size-base-6: 15.6px;
+  --font-size-mini-3: 14.3px;
+  --font-size-mid: 17px;
+  --font-size-mini-2: 14.2px;
+  --font-size-base-2: 16.2px;
+  --body-regular-size: 14px;
+  --font-size-2xs: 11px;
+  --font-size-6xl: 25px;
+ 
+
+
 
   /* Colors */
   --color-white: #fff;
   --color-darkslateblue: #353065;
+  --download-4-mirage: #1e293b;
   --color-gray-100: #7e7a86;
   --color-gray-200: #1c1925;
   --color-gray-300: #17151b;
   --color-gray-400: rgba(255, 255, 255, 0);
   --color-gray-500: #1d1f24;
   --color-gray-600: #0f0e11;
+  --color-gray-700: #2b2830;
+  --download-16-ebony: #0f172a;
   --color-silver: #c0bcca;
   --color-mediumslateblue: #8762f8;
+  --color-darkviolet: #ab0cdf;
+  --download-16-heliotrope: #c084fc;
   --color-darkslategray: #312e37;
   --colors-text: #f9f9f9;
+  --download-16-turbo: #eef2ff;
+  --color-crimson-100: #f1416c;
+  --color-crimson-200: #e7005e;
+  --color-darkslategray: #312e37;
+  --download-4-fiord: #475569;
+  --previewthemeforestnet-maroon: #8102ff;
+  --download-4-mystic: #e2e8f0;
+  --download-16-blue-chill: #0d9488;
+  --download-16-mountain-meadow: #22c55e;
+  --download-16-gull-gray: #94a3b8;
+  --download-16-nero-12: rgba(255, 255, 255, 0.12);
+  --download-16-cerise: #db2777;
+  --download-4-catskill-white: #f1f5f9;
+  --download-1-catskill-white: #f8fafc;
+  --download-4-royal-blue: #4f46e5;
+  --download-4-nero-02: rgba(255, 255, 255, 0);
+  --fuse-border: rgba(241,245,249,.12);
+
+
 
   /* Gaps */
   --gap-9xl: 28px;
