--- a/gadz-it-offecial/src/components/home_page_AL/QuickChat.css
+++ b/gadz-it-offecial/src/components/home_page_AL/QuickChat.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
   height: 100%;
   flex-direction: column;
-  width: 2.9589%;
+  width: 56.8px;
   font-size: var(--font-size-base-2);
   color: var(--download-4-fiord);
   position: fixed;
