--- a/gadz-it-offecial/src/components/home_page_AL/CreateProject.css
+++ b/gadz-it-offecial/src/components/home_page_AL/CreateProject.css
@@ -1,9 +1,10 @@
 .asset-1-2-gt-11 {
   position: relative;
-  width: 950px;
-  height: 514.9px;
+  width: 114%;
+  height: auto;
   object-fit: cover;
-  left: -250px;
+  left: -27%;
+  min-width: 850px;
 }
 
 .new-team1 {
@@ -70,9 +71,9 @@
 }
 .asset-2-2-1 {
   position: relative;
-  width: 500px;
-  height: 513px;
-  left: 98px;
+  width: 54.9%;
+  height: auto;
+  left: 200px;
   object-fit: cover;
 }
 .new-project {
@@ -85,7 +86,6 @@
   align-items: center;
   justify-content: center;
   width: 208px;
-  margin-top: 130px;
   border-radius: 999px;
   background-color: var(--color-crimson-200);
   height: 65px;
@@ -104,7 +104,6 @@
 
 .start-up-your {
   position: relative;
-  margin-top: 96px;
   font-size: var(--font-size-31xl);
   letter-spacing: -0.4px;
   line-height: 70px;
@@ -121,7 +120,8 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  gap: 20%;
+  justify-content: center;
   align-items: center;
   height: 96.103%;
   min-width: 74.925%;
@@ -137,21 +137,46 @@
   color: var(--color-white);
 }
 .divgrid1 {
-  width: 84.85%;
+  width: 98%;
   position: relative;
   /*height: 1353px;*/
+  justify-content: center;
+  align-items: center;
   flex-grow: 1;
   display: grid;
   grid-template-columns: 50% 50%;
   grid-row-gap: 123px;
   padding-top: 41px;
 }
+
+.divgrid1:not(:has(> *[style*="width: 1349px"])) {
+  .divflex34{
+    width: 100%;
+  }
+  
+}
+
+.divgrid2 {
+  width: 97%;
+  position: relative;
+  /*height: 1353px;*/
+  justify-content: center;
+  align-items: center;
+  padding-top: 41px;
+  display: flex;
+  flex-direction: column;
+}
+
 .divmat-mdc-tab-body-content1 {
-  align-self: stretch;
+  overflow: hidden;
+  display: flex;
   flex-direction: column;
   padding: 1.5rem 0;
+  max-width: 1500px;
+  align-items: flex-end;
+  justify-content: center;
 }
-.divmat-mdc-tab-body-content1,
+
 .divmat-mdc-tab-body-wrapper1,
 .tabpanel1 {
   overflow: hidden;
@@ -163,6 +188,8 @@
   align-self: stretch;
   flex: 1;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 100%;
 }
 .divmat-mdc-tab-body-wrapper1 {
@@ -173,4 +200,18 @@
   font-size: var(--font-size-31xl);
   color: var(--download-4-catskill-white);
   font-family: var(--font-inter);
+}
+
+@media (max-width: 1400px) {
+  .divgrid1 {
+    width: 97%;
+    position: relative;
+    /*height: 1353px;*/
+    justify-content: center;
+    align-items: center;
+    padding-top: 41px;
+    display: flex;
+    flex-direction: column;
+  }
+
 }
