--- a/gadz-it-offecial/src/components/home_page_AL/MainPageAL.css
+++ b/gadz-it-offecial/src/components/home_page_AL/MainPageAL.css
@@ -1,6 +1,5 @@
 .divflex-automargin,
-.divflex5,
-.header-parent {
+.divflex5 {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -100,6 +99,7 @@
 
 
 .divflex5 {
+  display: flex;
   width: 100%;
   height: 100%;
   background-image: url(../../assets/divflex@3x.png);
@@ -109,18 +109,22 @@
 }
 
 .divbg-card {
-  align-self: stretch;
+  display: flex;
+  width: 87.48%;
   align-items: center;
+  justify-content: center;
   padding: 0  2.012%;
   min-height: 11.6rem;
   margin: 0 4.2746%;
 }
 
 .divflex6 {
+  display: flex;
+  align-self: stretch;
   width: 100%;
   height: 43.37%;
-  align-items: flex-start;
-  margin: 2.95% 0;
+  align-items: center;
+  justify-content: center;
   box-sizing: border-box;
 }
 
@@ -307,12 +311,12 @@
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: 0 0.559%;
   height: 100%;
   width: 100%;
 }
 
 .mat-tab-header {
+  width: 87.63%;
   margin: 0 6rem;
   height: 3.4rem;
   box-shadow: inset 0 -1px var(--fuse-border) ;
@@ -321,12 +325,13 @@
 
 .divmat-mdc-tab-label-containe,
 .mat-tab-header {
-  align-self: stretch;
+  
   overflow: hidden;
   flex-direction: row;
 }
 .divmat-mdc-tab-label-containe {
   flex: 1;
+  align-self: stretch;
   background-color: var(--download-4-nero-02);
   /*box-shadow: 0-1px 0#e2e8f0 inset;*/
   
@@ -458,4 +463,29 @@
   box-sizing: border-box;
   width: 91px;
   height: 3px;
+}
+
+
+
+@media (min-width: 1601px) {
+
+  .divflex5{
+    display: flex;
+    align-items: center;
+  }
+
+  .divbg-card{
+    max-width: 1380px;
+    margin: 0;
+  }
+
+  .mat-tab-header {
+    margin: 0;
+    max-width: 1360px;
+  }
+
+  .mat-tab-group{
+    display: flex;
+    align-items: center;
+  }
 }
