--- a/gadz-it-offecial/src/components/home_page_BL/SearchBar.css
+++ b/gadz-it-offecial/src/components/home_page_BL/SearchBar.css
@@ -6,15 +6,11 @@
   height: 100px;
 }
 
-.search-box{
-  
-  position: relative;
-  
-  
-}
-.input-search{
+
+
+.input-search {
   height: 50px;
-  width: 300px;
+  width: 100%;
   border-style: none;
   padding: 10px;
   padding-bottom: 0px;
@@ -23,14 +19,14 @@
   outline: none;
   background-color: var(--color-gray-200);
   padding-right: 40px;
-  color:#fff;
+  color: #fff;
   border-radius: 0px;
   background-color: transparent;
-  border-bottom:1px solid rgba(255,255,255,.5);
+  border-bottom: 1px solid rgba(255, 255, 255, .5);
 }
 
-.input-search::placeholder{
-  color:rgba(255,255,255,.5);
+.input-search::placeholder {
+  color: rgba(255, 255, 255, .5);
   font-size: 18px;
   letter-spacing: 2px;
   font-weight: 100;
