--- a/gadz-it-offecial/src/components/home_page_AL/chat/groups/Groups.css
+++ b/gadz-it-offecial/src/components/home_page_AL/chat/groups/Groups.css
@@ -30,7 +30,7 @@
 
 .contacts-grid-group {
   width: 100%;
-  height: 73.1vh;
+  height: calc(100vh - 248px);
   overflow-x: scroll;
   overflow-x: hidden;
   border-top: 0.8px solid #ab0cdf;
