--- a/gadz-it-offecial/src/components/home_page_AL/project/ProjectHome.css
+++ b/gadz-it-offecial/src/components/home_page_AL/project/ProjectHome.css
@@ -1,7 +1,7 @@
 .asset-1-2-gt-11 {
   position: relative;
-  width: 114%;
-  height: auto;
+
+  height: 100%;
   object-fit: cover;
   left: -27%;
   min-width: 850px;
@@ -11,6 +11,7 @@
   position: relative;
   line-height: 16.5px;
 }
+
 .link9 {
   position: relative;
   display: flex;
@@ -43,6 +44,7 @@
   width: 312px;
   height: 94px;
 }
+
 .team1 {
   position: relative;
   margin-top: -20px;
@@ -54,6 +56,7 @@
   height: 94px;
   width: 138px;
 }
+
 .divflex33 {
   position: relative;
   display: flex;
@@ -69,6 +72,7 @@
   box-sizing: border-box;
   overflow: hidden;
 }
+
 .asset-2-2-1 {
   position: relative;
   width: 54.9%;
@@ -76,10 +80,12 @@
   left: 200px;
   object-fit: cover;
 }
+
 .new-project {
   position: relative;
   line-height: 16.5px;
 }
+
 .link10 {
   position: relative;
   display: flex;
@@ -90,7 +96,7 @@
   background-color: var(--color-crimson-200);
   height: 65px;
   border: transparent;
-  font-size: var( --font-size-6xl);
+  font-size: var(--font-size-6xl);
   letter-spacing: -0.4px;
   line-height: 16.5px;
   color: var(--download-4-catskill-white);
@@ -116,6 +122,7 @@
   width: 538px;
   height: 94px;
 }
+
 .divflex34 {
   position: relative;
   display: flex;
@@ -125,7 +132,7 @@
   align-items: center;
   height: 96.103%;
   min-width: 74.925%;
-  width:  102.521%;
+  width: 102.521%;
   left: 58px;
   border-radius: 16px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 1px 2px -1px rgba(0, 0, 0, 0.1);
@@ -136,6 +143,7 @@
   font-size: var(--font-size-6xl);
   color: var(--color-white);
 }
+
 .divgrid1 {
   width: 98%;
   position: relative;
@@ -150,10 +158,10 @@
 }
 
 .divgrid1:not(:has(> *[style*="width: 1349px"])) {
-  .divflex34{
+  .divflex34 {
     width: 100%;
   }
-  
+
 }
 
 .divgrid2 {
@@ -184,6 +192,7 @@
   align-items: center;
   justify-content: center;
 }
+
 .tabpanel1 {
   align-self: stretch;
   flex: 1;
@@ -192,6 +201,7 @@
   justify-content: center;
   width: 100%;
 }
+
 .divmat-mdc-tab-body-wrapper1 {
   width: 100%;
   position: relative;
