--- a/gadz-it-offecial/src/components/home_page_BL/slides/slide4/Slide4.css
+++ b/gadz-it-offecial/src/components/home_page_BL/slides/slide4/Slide4.css
@@ -3,16 +3,18 @@
   top: 50.633%;
   left: 1.7648%;
   width: 36.7648%;
-  height: 35.4431%;
+  height: 39.4431%;
   overflow: hidden;
   object-fit: cover;
 }
+
 .pseudo4-1 {
   border-radius: var(--br-xl);
   background-color: transparent;
   box-shadow: 0 5px 15px #8768f8;
   /*opacity: 0.1;*/
 }
+
 .pseudo4-1,
 .pseudo4-2,
 .pseudomask-group4 {
@@ -24,8 +26,10 @@
   bottom: 0;
   left: 0;
 }
+
 .pseudo4-2 {
-  border-radius: var(--br-xl);/*
+  border-radius: var(--br-xl);
+  /*
   background: linear-gradient(
     270deg,
     #4813d1,
@@ -52,17 +56,16 @@
   width: 73.2%;
   height: 28.2259%;
 }
+
 .link4 {
   cursor: pointer;
   border: 0;
   padding: 0;
-  background: linear-gradient(
-    270deg,
-    #4813d1,
-    #6608fa 33.33%,
-    #b545ff 66.67%,
-    #da8b79
-  );
+  background: linear-gradient(270deg,
+      #4813d1,
+      #6608fa 33.33%,
+      #b545ff 66.67%,
+      #da8b79);
   position: absolute;
   top: 79.7469%;
   left: 45.8089%;
@@ -98,6 +101,7 @@
   width: 54.4118%;
   height: 21.0127%;
 }
+
 .heading-4-2,
 .heading-4-3 {
   top: 28.9874%;
@@ -105,6 +109,7 @@
   font-size: 1.82292vw;
   width: 68.3089%;
 }
+
 .heading-4-3 {
   top: 90.5064%;
   left: 27.2059%;
@@ -112,6 +117,7 @@
   width: 55.5148%;
   height: 6.2026%;
 }
+
 .divgeneric-block4 {
   position: absolute;
   width: 97.1429%;
@@ -121,21 +127,23 @@
   height: 88.844%;
   overflow: hidden;
 }
+
 .asset-41-44 {
   position: absolute;
-  top: 15.1822%;
+  top: 8.1822%;
   left: 69.4286%;
   width: 21.4286%;
-  height: 75.3487%;
+  height: 85.3487%;
   object-fit: cover;
 }
+
 .divgeneric-block-wrapper-4 {
   position: relative;
-  top: 0.521vw;
+  top: 4px;
   border-radius: var(--br-5xl);
-  left: 4.004%;
+
   background-image: url(../../../../public/background-slides.png);
-  width: 72.917vw;
+  width: 100%;
   height: 97.823%;
   overflow: hidden;
   background-size: cover;
